#Refactor commit.
Для лучшения реализации основной функциональности:
- Исправлены pom файлы.